<resources>
    <string name="app_name">obj2022tp1mobile</string>
    <string name="str_title_home">Accueil</string>
    <string name="str_title_controle">Contrôle</string>
    <string name="str_title_graphic">Graphique</string>
    <string name="str_information">Informations</string>
    <string name="str_temperature">Température ambiante: </string>
    <string name="str_temperature_sign">°C</string>
    <string name="str_distance">Distance d\'ouverture: </string>
    <string name="str_opening_percentage">Pourcentage d\'ouverture de la porte</string>
    <string name="str_distance_sign">cm</string>
    <string name="str_motor">Status du moteur</string>
    <string name="str_motor_speed">Vitesse de rotation: </string>
    <string name="str_motor_speed_unit">tr/minute</string>
    <string name="str_motor_direction">Direction de rotation: </string>
    <string name="title_activity_graphic">GraphicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>