<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_title_home"
        android:textSize="20sp"
        android:translationX="175dp" />

    <LinearLayout
        android:id="@+id/linear_information"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:orientation="vertical"
        android:translationX="35dp"
        android:translationY="75dp">

        <TextView
            android:id="@+id/tv_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_information"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linear_temperature"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/str_temperature" />

            <TextView
                android:id="@+id/tv_temperature_mesure"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="NaN" />

            <TextView
                android:id="@+id/tv_temperature_unit"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_temperature_sign" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_distance"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/str_distance" />

            <TextView
                android:id="@+id/tv_distance_mesure"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="NaN" />

            <TextView
                android:id="@+id/tv_distance_unit"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_distance_sign" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_motor"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationX="35dp"
        android:translationY="175dp">

        <TextView
            android:id="@+id/tv_motor_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_motor"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linear_motor_status"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_motor_status_text"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/str_motor_speed" />

            <TextView
                android:id="@+id/tv_motor_speed"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="NaN" />

            <TextView
                android:id="@+id/tv_motor_speed_unit"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_motor_speed_unit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_direction"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_motor_direction_text"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/str_motor_direction" />

            <TextView
                android:id="@+id/tv_motor_direction"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="NaN" />

            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_opening_percentage"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/str_opening_percentage"
        android:textSize="20sp"
        android:translationX="35dp"
        android:translationY="215dp" />

    <ProgressBar
        android:id="@+id/progressBar_opening_percentage"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:scrollbarSize="10dp"
        android:translationX="35dp"
        android:translationY="275dp" />

</FrameLayout>